fix header background on mobile

--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -205,6 +205,7 @@
     text-align: center;
   }
  .Nav ul{
+   flex: 1;
    padding-inline-start: 0;
  } 
 
