--- a/styles/globals.css
+++ b/styles/globals.css
@@ -42,3 +42,10 @@ img{
     min-height: initial !important;
     max-height: fit-content !important;
 }
+
+@media screen and (max-width: 790px) {
+  header{
+    background-position: bottom;
+  }
+  
+}
